<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_new_word"
        style="@style/word_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_word"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_get_translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_get_translate"
        android:textColor="@color/buttonLabel" />

    <Button
        android:id="@+id/button_get_definition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:padding="6dp"
        android:text="@string/button_get_definition"
        android:textColor="@color/buttonLabel" />

    <EditText
        android:id="@+id/edit_new_translate"
        style="@style/word_translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_translate"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_definition"
        style="@style/word_definition"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:hint="@string/hint_definition"
        android:padding="@dimen/small_padding"
        android:textSize="18sp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done_black_24dp" />

    <!--<TextView-->
        <!--android:id="@+id/response_text"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

    <!--<Button-->
        <!--android:id="@+id/button_google_translate"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/colorPrimary"-->
        <!--android:text="@string/button_google_translate"-->
        <!--android:textColor="@color/buttonLabel"-->
        <!--android:padding="@dimen/big_padding"/>-->
</LinearLayout>